Prevent banner from getting cutoff

--- a/src/components/SponStyle.css
+++ b/src/components/SponStyle.css
@@ -1,8 +1,3 @@
 #sponsor {
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: top;
-    background-image: url('../sponsors/banner.svg');
     width: 100%;
-    /* height: 100vh; */
   }
